# study_django

./: .env.sample  README.md  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: catalog_category.json  catalog_product.json  initial_data.json
catalog/management/commands/: add_categories_and_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_category_alter_product_pic.py  0003_feedbackmessage.py  0004_remove_feedbackmessage_message_and_more.py  0005_feedbackmessage_message.py  0006_alter_feedbackmessage_message.py
catalog/templates/: add_product.html  base.html  contacts.html  feedback_success.html  home.html  product_created.html  product_detail.html  product_list.html
catalog/templates/catalog/: add_product.html  base.html  category_products.html  contacts.html  edit_product.html  feedback_success.html  home.html  product_created.html  product_detail.html  product_list.html
catalog/templates/includes/: contacts_table.html  inc_menu.html  skyshop_info.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
skyblog/: admin.py  apps.py  models.py  urls.py  views.py
skyblog/migrations/: 0001_initial.py  0002_alter_blogpost_options_alter_blogpost_created_at_and_more.py
skyblog/templates/: base.html  home.html
skyblog/templates/includes/: skyblog_info.html  theme_switcher.html
static/css/: custom.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/fixtures/: groups_data.json  users_data.json
users/templates/: login.html
(+20 files in other folders)
